tests/error/misc_errors/span_indented_struct.err
Error: Variable not defined (at $FILE:11:12)
   | 
 9 |     @guppy.struct(module)
10 |     class Foo:
11 |         x: "blah"
   |             ^^^^ `blah` is not defined

Guppy compilation failed due to 1 previous error
